Version 3.0.2
-------------
- Bugfix: Don't crash if there's a special method that is less than 4 characters long, some obvuscated code has this
- Bugfix: #15: Methods from derived classes can be invoked without getting an Interface not found exception

Version 3.0.0.0
---------------
Added: Support for out and ref values on the intercepted methods
Removed: No web builds. All builds are have not reference to web anymore
Changed: Interface Proxies are created for bound interfaces rather than a class proxy for its implementation.
Bugfix: Fixing multithreading issue with advice registry. Updating nuget. Fixing fluent assertions build task.


Version 2.2.1.0
---------------
Bugfix: An AmbiguousMatchExcpetion was trown for classes that have multiple properties with the same name.