@@ -1,0 +1,8 @@
+#if !NET_35 && !SILVERLIGHT
+namespace Ninject.Extensions.Interception
+{
+    public class AsyncInterceptionContextDynamicProxy2 : AsyncInterceptionContext<DynamicProxyModule>
+    {
+    }
+}
+#endif
