@@ -1,0 +1,8 @@
+#if !NET_35 && !SILVERLIGHT
+namespace Ninject.Extensions.Interception
+{
+    public class AsyncInterceptionContextLinFu : AsyncInterceptionContext<LinFuModule>
+    {
+    }
+}
+#endif
