@@ -39,7 +39,7 @@
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
     <OutputPath>..\..\build\debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
+    <DefineConstants>TRACE;DEBUG;NET_40</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <CodeAnalysisRuleSet>AllRules.ruleset</CodeAnalysisRuleSet>
@@ -78,6 +78,9 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AsyncInterceptionContext.cs" />
+    <Compile Include="AsyncInterceptionContextDynamicProxy2.cs" />
+    <Compile Include="AsyncInterceptionContextLinFu.cs" />
     <Compile Include="Attributes\FlagAttribute.cs" />
     <Compile Include="AutoNotifyPropertyChangedContextDynamicProxy2.cs" />
     <Compile Include="AutoNotifyPropertyChangedContextLinFu.cs" />
